--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
     </span>
     
     <span style="font-family:TimesNewRoman">
-        <body>Well I can guess it is. This is just slightly slow </body>
+        <body>
+            Well I can guess it is. This is just slightly slow 
+            <img src="lab1-1.gif" alt="lab1" height="100" width="100">
+        </body>        
     </span>
 </html>
 
