--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             padding: 20px 30px;
             text-align: : center;
             font-size 20px;
-            cursor: "ExclamationMark.gif"
+            cursor: "ExclamationMark.gif",auto;
         }
     </style>
     
@@ -24,11 +24,12 @@
     <span style="font-family:TimesNewRoman">
         <body>
             Well I can guess it is. This is just slightly slow
-            <H6>Look it's an image below</H6>
+            <H6>Look it's Lab1-1</H6>
             <img src="lab1-1.gif" alt="lab1" height="100" width="100">
             
-            <H6>Now it's a button</H6>
-            <button class= "button">Look a button</button>
+            <H6>Now there's a button</H6>
+            <button onclick="showPicture()"class= "button">Look a button</button>
+            <img style="display:none;" id ="lab1-1.gif" src="lab1-1.gif" alt="lab1" height="100" width="100">
         </body>        
     </span>
 </html>
