--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
         <body>
             Well I can guess it is. This is just slightly slow
             <H6>Look it's Lab1-1</H6>
-            <img src="lab1-1.gif" alt="lab1" height="100" width="100">
+            <img src="Images/lab1-1.gif" alt="lab1" height="100" width="100">
             
             <H6>Now there's a button</H6>
             <button onclick="displayPicture()"class= "button">Look a button</button>
-            <img style="display:none;" id ="lab-1Button" src="lab1-1.gif" alt="lab1" height="100" width="100">
+            <img style="display:none;" id ="lab-1Button" src="Images/lab1-1.gif" alt="lab1" height="100" width="100">
         
         <script>
         function displayPicture()
