--- a/index.html
+++ b/index.html
@@ -24,9 +24,10 @@
         <body>
             Well I can guess it is. This is just slightly slow
             <H6>Look it's Lab1-1</H6>
-            <img src="lab1-1.gif" alt="lab1" height="100" width="100">
+            <img src="Images/lab1-1.gif" alt="lab1" height="100" width="100">
             
-            <img src="lab1-2.gif" alt="lab2" height="100" width="100">
+            <img src="Images/lab1-2.gif" alt="lab2" height="200" width="200">
+            <img src="Images/lab1-3.gif" alt="lab2" height="200" width="200">
             
             <H6>Now there's a button</H6>
             <button onclick="displayPicture()"class= "button">Look a button</button>
