testing to add basic python thing

--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
             <button onclick="displayPicture()"class= "button">Look a button</button>
             <img style="display:none;" id ="lab-1Button" src="Images/lab1-1.gif" alt="lab1" height="100" width="100">
         
+               <iframe height="400px" width="100%" src="https://repl.it/repls/SmartRuralRectangles?lite=true" scrolling="no" frameborder="no" allowtransparency="true" allowfullscreen="true" sandbox="allow-forms allow-pointer-lock allow-popups allow-same-origin allow-scripts allow-modals"></iframe>
+            
         <script>
         function displayPicture()
         {
