Testing if it's updating

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             
             <img src="Images/lab1-2.gif" alt="lab2" height="200" width="200">
             <img src="Images/lab1-3.gif" alt="lab3" height="200" width="200">
+            <img src="Images/lab1-3.gif" alt="lab3" height="400" width="400">
             
             <H6>Now there's a button</H6>
             <button onclick="displayPicture()"class= "button">Look a button</button>
