--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <script>
         function displayPicture()
         {
-            document.getElementById("pythonBox").style = "display:block;"
+            document.getElementById("pythonBox").style = "display:inline;"
             document.getElementById("lab-1Button").style = "display:block;"
         }
         </script>
