--- a/index.html
+++ b/index.html
@@ -28,25 +28,25 @@
             
             <img src="Images/lab1-2.gif" alt="lab1-2" height="200" width="200">
             <img src="Images/lab1-3.gif" alt="lab1-3" height="200" width="200">
-            <img src="Images/lab2-1a.gif" alt="lab2-1a" height="200" width="200">
-            <img src="Images/lab2-2.gif" alt="lab2-2" height="200" width="200">
-            <img src="Images/lab2-3.gif" alt="lab2-3" height="200" width="200">
-            <img src="Images/lab3-1a.gif" alt="lab3-1a" height="200" width="200">
-            <img src="Images/lab3-1b.gif" alt="lab3-1b" height="200" width="200">
-            <img src="Images/lab3-1c.gif" alt="lab3-1c" height="200" width="200">
-            <img src="Images/lab3-1d.gif" alt="lab3-1d" height="200" width="200">
-            <img src="Images/lab3-1e.gif" alt="lab3-1e" height="200" width="200">
+            <img src="Images/lab2-1a.jpg" alt="lab2-1a" height="200" width="200">
+            <img src="Images/lab2-2.jpg" alt="lab2-2" height="200" width="200">
+            <img src="Images/lab2-3.jpg" alt="lab2-3" height="200" width="200">
+            <img src="Images/lab3-1a.jpg" alt="lab3-1a" height="200" width="200">
+            <img src="Images/lab3-1b.jpg" alt="lab3-1b" height="200" width="200">
+            <img src="Images/lab3-1c.jpg" alt="lab3-1c" height="200" width="200">
+            <img src="Images/lab3-1d.jpg" alt="lab3-1d" height="200" width="200">
+            <img src="Images/lab3-1e.jpg" alt="lab3-1e" height="200" width="200">
             <img src="Images/lab3-2a.gif" alt="lab3-2a" height="400" width="400">
-            <img src="Images/lab3-2b.gif" alt="lab3-2b" height="200" width="200">
+            <img src="Images/lab3-2b.jpg" alt="lab3-2b" height="200" width="200">
             <img src="quotes1.jpg" alt="quote1" height="200" width="200">
-            <img src="quotes2.jpg" alt="quote2" height="200" width="200">
-            <img src="quotes3.jpg" alt="quote3" height="200" width="200">
-            <img src="quotes4.jpg" alt="quote4" height="200" width="200">
-            <img src="quotes5.jpg" alt="quote5" height="200" width="200">
-            <img src="quotes6.jpg" alt="quote6" height="200" width="200">
-            <img src="quotes7.jpg" alt="quote7" height="200" width="200">
-            <img src="quotes8.jpg" alt="quote8" height="200" width="200">
-            <img src="quotes9.jpg" alt="quote9" height="200" width="200">
+            <img src="Images/quotes2.jpg" alt="quote2" height="200" width="200">
+            <img src="Images/quotes3.jpg" alt="quote3" height="200" width="200">
+            <img src="Images/quotes4.jpg" alt="quote4" height="200" width="200">
+            <img src="Images/quotes5.jpg" alt="quote5" height="200" width="200">
+            <img src="Images/quotes6.jpg" alt="quote6" height="200" width="200">
+            <img src="Images/quotes7.jpg" alt="quote7" height="200" width="200">
+            <img src="Images/quotes8.jpg" alt="quote8" height="200" width="200">
+            <img src="Images/quotes9.jpg" alt="quote9" height="200" width="200">
             
             <H6>Now there's a button</H6>
             <button onclick="displayPicture()"class= "button">Look a button</button>
