--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             
             <img src="Images/lab1-2.gif" alt="lab1-2" height="200" width="200">
             <img src="Images/lab1-3.gif" alt="lab1-3" height="200" width="200">
-            <img src="Images/lab2-1a.jpg" alt="lab2-1a" height="200" width="200">
+            <img src="Images/2-1a.jpg" alt="lab2-1a" height="200" width="200">
             <img src="Images/lab2-2.jpg" alt="lab2-2" height="200" width="200">
             <img src="Images/lab2-3.jpg" alt="lab2-3" height="200" width="200">
             <img src="Images/lab3-1a.jpg" alt="lab3-1a" height="200" width="200">
