--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <img src="Images/lab3-1e.jpg" alt="lab3-1e" height="200" width="200">
             <img src="Images/lab3-2a.gif" alt="lab3-2a" height="400" width="400">
             <img src="Images/lab3-2b.jpg" alt="lab3-2b" height="200" width="200">
-            <img src="quotes1.jpg" alt="quote1" height="200" width="200">
+            <img src="Images/quotes1.jpg" alt="quote1" height="200" width="200">
             <img src="Images/quotes2.jpg" alt="quote2" height="200" width="200">
             <img src="Images/quotes3.jpg" alt="quote3" height="200" width="200">
             <img src="Images/quotes4.jpg" alt="quote4" height="200" width="200">
