--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <img src="Images/lab7-4.jpg" alt="lab7-4" height="200" width="200">
             
             <img src="Images/lab8-1.jpg" alt="lab8-1" height="200" width="200">
-            <img src="Images/lab8-2.jpg" alt="lab8-2" height="200" width="200">
+            <img src="Images/lab8-2a.jpg" alt="lab8-2a" height="200" width="200">
             <!--<img src="Images/lab3-1b.jpg" alt="lab3-1b" height="200" width="200">
             <img src="Images/lab3-1c.jpg" alt="lab3-1c" height="200" width="200">
             <img src="Images/lab3-1d.jpg" alt="lab3-1d" height="200" width="200">
