--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <img src="Images/lab3-1a.jpg" alt="lab3-1a" height="200" width="200">
             <img src="Images/lab3-2a.gif" alt="lab3-2a" height="400" width="400">
             
-            <img src="Images/lab4-1.jpg" alt="lab4-1" height="200" width="200">
+            <img src="Images/lab4-1.gif" alt="lab4-1" height="200" width="200">
             <img src="Images/lab4-2.jpg" alt="lab4-2" height="200" width="200">
             <img src="Images/lab4-3.jpg" alt="lab4-3" height="200" width="200">
             <img src="Images/lab4-4.jpg" alt="lab4-4" height="200" width="200">
