--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     
     <span style="font-family:TimesNewRoman">
         <body>
-            Well I can guess it is. This is just slightly slow
+            Bum bum bum baaaam
             <H6>Look it's Lab1-1</H6>
             <img src="Images/lab1-1.gif" alt="lab1" height="100" width="100">
             <img src="Images/lab1-2.gif" alt="lab1-2" height="200" width="200">
