--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
             <img src="Images/lab5-1.jpg" alt="lab5-1" height="200" width="200">
             <img src="Images/lab5-2.jpg" alt="lab5-2" height="200" width="200">
             
-            <img src="Images/lab6-1.jpg" alt="lab6-1" height="200" width="200">
-            <img src="Images/lab6-2.jpg" alt="lab6-2" height="200" width="200">
+            <img src="Images/lab6-1.htm" alt="lab6-1" height="200" width="200">
+            <img src="Images/lab6-2.htm" alt="lab6-2" height="200" width="200">
             
             <img src="Images/lab7-1.jpg" alt="lab7-1" height="200" width="200">
             <img src="Images/lab7-2.jpg" alt="lab7-2" height="200" width="200">
