--- a/index.html
+++ b/index.html
@@ -26,16 +26,16 @@
 
     <body>
 
-        <a href="GimpPages/Gimp1.html">Lesson 1</a>
-        <a href="GimpPages/Gimp2.html">Lesson 2</a>
-        <a href="GimpPages/Gimp3.html">Lesson 3</a>
-        <a href="GimpPages/Gimp4.html">Lesson 4</a>
-        <a href="GimpPages/Gimp5.html">Lesson 5</a>
-        <a href="GimpPages/Gimp6.html">Lesson 6</a>
-        <a href="GimpPages/Gimp7.html">Lesson 7</a>
-        <a href="GimpPages/Gimp8.html">Lesson 8</a>
-        <a href="GimpPages/Gimp9.html">Lesson 9</a>
-        <a href="GimpPages/Gimp10.html">Lesson 10</a>
+        <a href="GimpPages/Gimp1.html">Lesson 1</a><br>
+        <a href="GimpPages/Gimp2.html">Lesson 2</a><br>
+        <a href="GimpPages/Gimp3.html">Lesson 3</a><br>
+        <a href="GimpPages/Gimp4.html">Lesson 4</a><br>
+        <a href="GimpPages/Gimp5.html">Lesson 5</a><br>
+        <a href="GimpPages/Gimp6.html">Lesson 6</a><br>
+        <a href="GimpPages/Gimp7.html">Lesson 7</a><br>
+        <a href="GimpPages/Gimp8.html">Lesson 8</a><br>
+        <a href="GimpPages/Gimp9.html">Lesson 9</a><br>
+        <a href="GimpPages/Gimp10.html">Lesson 10</a><br>
 
 
 
