Adding page break

--- a/GimpPages/Gimp1.html
+++ b/GimpPages/Gimp1.html
@@ -11,7 +11,7 @@
 
 
 <body>
-    <a href="../index.html">Home</a>
+    <a href="../index.html">Home</a><br>
 
     <H6>Look it's Lab1-1</H6>
     <img src="../Images/lab1-1.gif" alt="lab1">
