--- a/GimpPages/Gimp7.html
+++ b/GimpPages/Gimp7.html
@@ -10,7 +10,7 @@
 
 
 <body>
-    <a href="../index.html">Home</a>
+    <a href="../index.html">Home</a><br>
 
 
     <img src="../Images/lab7-1.jpg" alt="lab7-1">
