--- a/GimpPages/Gimp4.html
+++ b/GimpPages/Gimp4.html
@@ -10,7 +10,7 @@
 
 
 <body>
-    <a href="../index.html">Home</a>
+    <a href="../index.html">Home</a><br>
 
     <img src="../Images/lab4-1.gif" alt="lab4-1">
     <img src="../Images/lab4-2.jpg" alt="lab4-2">
