--- a/GimpPages/Gimp5.html
+++ b/GimpPages/Gimp5.html
@@ -10,7 +10,7 @@
 
 
 <body>
-    <a href="../index.html">Home</a>
+    <a href="../index.html">Home</a><br>
 
     <img src="../Images/lab5-1.jpg" alt="lab5-1">
     <img src="../Images/lab5-2.jpg" alt="lab5-2">
