--- a/GimpPages/Gimp6.html
+++ b/GimpPages/Gimp6.html
@@ -10,7 +10,7 @@
 
 
 <body>
-    <a href="../index.html">Home</a>
+    <a href="../index.html">Home</a><br>
 
     <img src="../Images/lab6-1.jpg" alt="lab6-1">
     <img src="../Images/lab6-2.png" alt="lab6-2">
