--- a/GimpPages/Gimp10.html
+++ b/GimpPages/Gimp10.html
@@ -10,7 +10,7 @@
 
 
 <body>
-    <a href="../index.html">Home</a><br>
+    <a href="../index.html">Home</a><br />
     <img src="../Images/lab10-1.jpg" alt="lab10-1">
     <img src="../Images/lab10-5.jpg" alt="lab10-5">
     <img src="../Images/Lab10-6.jpg" alt="lab10-6">
