--- a/GimpPages/Gimp2.html
+++ b/GimpPages/Gimp2.html
@@ -10,7 +10,7 @@
 
 
 <body>
-    <a href="../index.html">Home</a><br>
+    <a href="../index.html">Home</a><br />
 
     <img src="../Images/2-1a.jpg" alt="lab2-1a">
     <img src="../Images/lab2-2.jpg" alt="lab2-2">
