--- a/GimpPages/Gimp3.html
+++ b/GimpPages/Gimp3.html
@@ -10,7 +10,7 @@
 
 
 <body>
-    <a href="../index.html">Home</a><br>
+    <a href="../index.html">Home</a><br />
 
     <img src="../Images/lab3-1a.jpg" alt="lab3-1a">
     <img src="../Images/lab3-2a.gif" alt="lab3-2a">
