--- a/GimpPages/Gimp8.html
+++ b/GimpPages/Gimp8.html
@@ -10,7 +10,7 @@
 
 
 <body>
-    <a href="../index.html">Home</a><br>
+    <a href="../index.html">Home</a><br />
 
     <img src="../Images/lab8-1.jpg" alt="lab8-1">
     <img src="../Images/lab8-2a.jpg" alt="lab8-2a">
