--- a/GimpPages/Gimp9.html
+++ b/GimpPages/Gimp9.html
@@ -10,7 +10,7 @@
 
 
 <body>
-    <a href="../index.html">Home</a><br>
+    <a href="../index.html">Home</a><br />
     <img src="../Images/lab9-1.gif" alt="lab9-1">
 
 </body>
