--- a/GimpPages/Gimp5.html
+++ b/GimpPages/Gimp5.html
@@ -12,7 +12,7 @@
 <body>
     <a href="../index.html">Home</a><br />
 
-    <img src="../Images/lab5-1.jpg" alt="lab5-1">
+    <img src="../Images/lab5-1.jpg" alt="work">
     <img src="../Images/lab5-2.jpg" alt="lab5-2">
 </body>
 
