--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <body>
 
-        <a href="GimpPages/Gimp1.html">Lesson 1</a><br>
+        <a href="GimpPages/Gimp1.html">Lesson 1</a> <img src="Images/" alt="Lesson1" height="200" width="200">><br>
         <a href="GimpPages/Gimp2.html">Lesson 2</a><br>
         <a href="GimpPages/Gimp3.html">Lesson 3</a><br>
         <a href="GimpPages/Gimp4.html">Lesson 4</a><br>
