--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 
     <body>
 
-        <a href="GimpPages/Gimp1.html">Lesson 1</a> <img src="Images/Lesson1.png" alt="Lesson1" height="200" width="200"><br>
-        <a href="GimpPages/Gimp2.html">Lesson 2</a> <img src="Images/Lesson2.png" alt="Lesson1" height="200" width="200"><br>
+        <a href="GimpPages/Gimp1.html"><img src="Images/Lesson1.png" alt="Lesson1" height="200" width="200"> </a> <br>
+        <a href="GimpPages/Gimp2.html"><img src="Images/Lesson2.png" alt="Lesson1" height="200" width="200"></a> <br>
         <a href="GimpPages/Gimp3.html">Lesson 3</a><br>
         <a href="GimpPages/Gimp4.html">Lesson 4</a><br>
         <a href="GimpPages/Gimp5.html">Lesson 5</a><br>
