--- a/HTMLPractice/premierTable.html
+++ b/HTMLPractice/premierTable.html
@@ -9,8 +9,12 @@
 
 <body>
     <nav>
-        
-        <h1>Premier League Table</h1>
+        <h1>   
+            <a href="../index.html"> 
+            <img src="../Images/backarrow.png" width="50px" height="50px";>
+            </a> 
+            &nbsp;&nbsp;Premier League Table
+        </h1>
         <table>
             <tr>
                 <td>Matches</td>
