--- a/index.html
+++ b/index.html
@@ -163,6 +163,7 @@
                         </div>
                     </div>
                 </a>
+
                 
                 <a href="index.html">
                     <div class="content-card">
@@ -173,6 +174,16 @@
                         </div>
                     </div>
                 </a>
+                <a href="FlexBoxLab.html">
+                    <div class="content-card">
+                        <img src="Images/LoL-Icon.png">
+
+                        <div class="content-text">
+                            Flex box lab
+                        </div>
+                    </div>
+                </a>
+
             </div>
 
 
