--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                         </div>
                     </div>
                 </a>
-                <a href="FlexBoxLab.html">
+                <a href="HTMLPractice/FlexBoxLab.html">
                     <div class="content-card">
                         <img src="Images/LoL-Icon.png">
 
