--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
 
 
     </div>
-        <header>
+        Testing :) 
+        <!-- <header>
             <div class="hello-text">
                 Hello!
             </div>
@@ -188,7 +189,7 @@
 
 
 
-        </div>
+        </div> -->
 
 
 </body>
