--- a/index.html
+++ b/index.html
@@ -41,7 +41,12 @@
 
 
     </div>
-        Testing :) 
+        <header>
+            <div>
+                <img src = "NewImages/MyIconV1.png">
+            </div>
+        </header>
+        
         <!-- <header>
             <div class="hello-text">
                 Hello!
