--- a/index.html
+++ b/index.html
@@ -40,14 +40,14 @@
 
 
 
-    </div>
+    <!--</div>
         <header>
             <div>
                 <img src = "NewImages/MyIconV1.png">
             </div>
-        </header>
+        </header>-->
         
-        <!-- <header>
+        <header>
             <div class="hello-text">
                 Hello!
             </div>
@@ -194,7 +194,7 @@
 
 
 
-        </div> -->
+        </div> 
 
 
 </body>
