--- a/HTMLPractice/ShyseptFile.html
+++ b/HTMLPractice/ShyseptFile.html
@@ -40,6 +40,7 @@ document.write('<link rel="stylesheet" type="text/css" href="'+ (mactest? mac_ex
 
 
 <table>
+  
   <tr>
     <th>Item</th>
     <th>Manufacturer</th>
@@ -87,7 +88,14 @@ document.write('<link rel="stylesheet" type="text/css" href="'+ (mactest? mac_ex
     <td>0.87</td>
     <td>3</td>
     <td>2.61</td>
-  </tr>  
+    
+  </tr> 
+  <tr>
+    <td>Total</td>
+  </tr>
+  
+  
+  
 </table>
 
 </body>
