--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
 
 
 
-    <!--</div>
-        <header>
+    </div>
+        <!--<header>
             <div>
                 <img src = "NewImages/MyIconV1.png">
             </div>
